# pot-app-translate-plugin-volcengine

./: Cargo.toml  README.md  README_EN.md  info.json  main.js
.github/workflows/: build.yml
src/: lib.rs
