[package]
name = "plugin"
version = "1.0.0"
authors = ["TechDecryptor"]
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
reqwest = {version="0.11.18",features = ["blocking","json"]}
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl={version="0.10",features=["vendored"]}
